[tool.poetry]
name = "web-spider"
version = "0.1.0"
description = ""
authors = ["OoGod <xxxxx@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.20.0"
lxml = "^4.8.0"
charset-normalizer = "^2.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
